# legato-Service-AirVantageConnector

./: Makefile  ar759x.sdef  ar759x_readonly.sdef  avcService.adef
apps/test/: CMakeLists.txt
apps/test/airVantageConnectorUnitTest/: CMakeLists.txt  Component.cdef  interfaces.h  main.c
apps/test/airVantageConnectorUnitTest/airVantageConnectorComp/: Component.cdef  airVantageConnector_stub.c  dtlsConnection.h  dtlsConnection_stub.c  lwm2mcore_stub.c
apps/test/assetDataTest/assetDataTestComponent/: main.c
apps/test/assetPush/assetPushComponent/: main.c
apps/test/avDataUnitTest/: CMakeLists.txt  main.c
apps/test/avDataUnitTest/assetDataComp/: Component.cdef  assetData_stub.c
apps/test/avcIntegrationTest/: avcTest.adef
apps/test/avcIntegrationTest/avcTestComp/: Component.cdef  avcTest.c
apps/test/coapEchoTest/: CMakeLists.txt  coapEchoTest.adef
apps/test/coapEchoTest/coapEchoTestComponent/: Component.cdef  coapHandlerTest.h  main.c
apps/test/coapHandlerTest/: CMakeLists.txt  coapHandlerTest.adef
apps/test/coapHandlerTest/coapHandlerTestComponent/: Component.cdef  coapHandlerTest.h  main.c
apps/test/coapHandlerTest/coapHandlerTestComponent/testVectors/: get2kbString.cbor  getSmallString.cbor  transmitLargeString.cbor  transmitSmallString.cbor
apps/test/packageDownloadHost/: Component.cdef  main.c  main.h
apps/test/packageDownloadHost/packageDownloadComp/: Component.cdef  avcAppUpdate_stub.c  avcClient_stub.c  avcServer_stub.c  curl_stub.c  fileStreamClient_stub.c  fileStreamServer_stub.c  fwupdateServer_stub.c  le_httpClient_stub.c  le_httpClient_stub.h  lwm2mcore_stub.c  mbedtls_stub.c  secStorage_stub.c  tpfServer_stub.c
apps/test/suspendResume/suspendResumeComponent/: main.c
apps/test/timeseries/tsComponent/: main.c
avcAppUpdate/: Component.cdef  avcAppUpdate.c  avcAppUpdate.h  avcFrameworkUpdate.c
avcClient/: avcClient.c  avcClient.h  avcPortDevice.c  avcPortSecurity.c  avc_client.c  avc_portDevice.c  avc_portSecurity.c  osPortAction.c  osPortConnectivity.c  osPortCredentials.c  osPortCredentialsCommon.c  osPortDevice.c  osPortLocation.c  osPortParamStorage.c  osPortSecurity.c  osPortSecurityMbedTLS.c  (+6 more)
(+105 files in other folders)
